PageableChecker rework